--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "deploy": "twilio-run deploy"
   },
   "dependencies": {
-    "twilio": "^3.56",
-    "@twilio/runtime-handler": "1.2.2"
+    "@twilio/runtime-handler": "1.2.2",
+    "mysql": "^2.18.1",
+    "twilio": "^3.56"
   },
   "devDependencies": {
     "twilio-run": "^3.4.1"
