--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@twilio/runtime-handler": "1.2.2",
+    "axios": "^0.27.2",
     "mysql": "^2.18.1",
     "twilio": "^3.56"
   },
